// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentsTableComponent should not render selection column when isSelectionDisabled is true 1`] = `
<DocumentsTableComponent
  collection={
    {
      "databaseId": "db",
      "id": [Function],
    }
  }
  columnDefinitions={
    [
      {
        "id": "id",
        "isPartitionKey": false,
        "label": "ID",
      },
      {
        "id": "partitionKey",
        "isPartitionKey": true,
        "label": "Partition Key",
      },
    ]
  }
  isRowSelectionDisabled={true}
  items={
    [
      {
        "id": "1",
        "partitionKey": "pk1",
      },
      {
        "id": "2",
        "partitionKey": "pk2",
      },
      {
        "id": "3",
        "partitionKey": "pk3",
      },
    ]
  }
  onItemClicked={[Function]}
  onRefreshTable={[Function]}
  onSelectedRowsChange={[Function]}
  selectedColumnIds={[]}
  selectedRows={Set {}}
  size={
    {
      "height": 0,
      "width": 0,
    }
  }
>
  <Table
    aria-label="Filtered documents table"
    data-tabster="{"mover":{"cyclic":false,"direction":3,"memorizeCurrent":true}}"
    noNativeElements={true}
    role="grid"
    size="small"
    sortable={true}
    style={
      {
        "minWidth": "fit-content",
      }
    }
  >
    <div
      aria-label="Filtered documents table"
      className="fui-Table ___1kbqy50_18rlg51 fgkb47j fhovq9v ftgm304"
      data-tabster="{"mover":{"cyclic":false,"direction":3,"memorizeCurrent":true}}"
      role="grid"
      style={
        {
          "minWidth": "fit-content",
        }
      }
    >
      <TableHeader
        className="___1gzszts_0000000 f22iagw"
      >
        <div
          className="fui-TableHeader ___1gzszts_39qb7g0 f22iagw"
          role="rowgroup"
        >
          <TableRow
            className="___1flxklq_0000000 f1i800kq"
            style={
              {
                "width": -15,
              }
            }
          >
            <div
              className="fui-TableRow ___1ah7syw_1i43eqh f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1facbz3 f22iagw f122n59 f1i800kq"
              role="row"
              style={
                {
                  "width": -15,
                }
              }
            />
          </TableRow>
          <div
            className="___1ndi7nn_0000000 f64fuq3 f1ppkcfa"
          />
        </div>
      </TableHeader>
      <TableBody>
        <div
          className="fui-TableBody ___oeyxrt0_1baslyg ftgm304"
          role="rowgroup"
        >
          <List
            direction="ltr"
            height={-32}
            itemCount={3}
            itemData={
              [
                {
                  "appearance": "none",
                  "item": {
                    "id": "1",
                    "partitionKey": "pk1",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 0,
                  "selected": false,
                },
                {
                  "appearance": "none",
                  "item": {
                    "id": "2",
                    "partitionKey": "pk2",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 1,
                  "selected": false,
                },
                {
                  "appearance": "none",
                  "item": {
                    "id": "3",
                    "partitionKey": "pk3",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 2,
                  "selected": false,
                },
              ]
            }
            itemSize={32}
            layout="vertical"
            overscanCount={2}
            style={
              {
                "overflowY": "scroll",
              }
            }
            useIsScrolling={false}
            width={0}
          >
            <div
              onScroll={[Function]}
              style={
                {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": -32,
                  "overflow": "auto",
                  "overflowY": "scroll",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
            >
              <div
                style={
                  {
                    "height": 96,
                    "pointerEvents": undefined,
                    "width": "100%",
                  }
                }
              >
                <RenderRow
                  data={
                    [
                      {
                        "appearance": "none",
                        "item": {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={0}
                  key="0"
                  style={
                    {
                      "height": 32,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={2}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="1"
                    style={
                      {
                        "cursor": "pointer",
                        "height": 32,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 0,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={2}
                      aria-selected={false}
                      className="fui-TableRow ___1h2me2v_1yag1rz f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f4xjyn1 ff1wgvm fiob0tu f1j6scgf f1x4h75k f1facbz3 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        {
                          "cursor": "pointer",
                          "height": 32,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 0,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    />
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    [
                      {
                        "appearance": "none",
                        "item": {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={1}
                  key="1"
                  style={
                    {
                      "height": 32,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 32,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={3}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="2"
                    style={
                      {
                        "cursor": "pointer",
                        "height": 32,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 32,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={3}
                      aria-selected={false}
                      className="fui-TableRow ___1h2me2v_1yag1rz f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f4xjyn1 ff1wgvm fiob0tu f1j6scgf f1x4h75k f1facbz3 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        {
                          "cursor": "pointer",
                          "height": 32,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 32,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    />
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    [
                      {
                        "appearance": "none",
                        "item": {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={2}
                  key="2"
                  style={
                    {
                      "height": 32,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 64,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={4}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="3"
                    style={
                      {
                        "cursor": "pointer",
                        "height": 32,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 64,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={4}
                      aria-selected={false}
                      className="fui-TableRow ___1h2me2v_1yag1rz f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f4xjyn1 ff1wgvm fiob0tu f1j6scgf f1x4h75k f1facbz3 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        {
                          "cursor": "pointer",
                          "height": 32,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 64,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    />
                  </TableRow>
                </RenderRow>
              </div>
            </div>
          </List>
        </div>
      </TableBody>
    </div>
  </Table>
</DocumentsTableComponent>
`;

exports[`DocumentsTableComponent should render documents and partition keys in header 1`] = `
<DocumentsTableComponent
  collection={
    {
      "databaseId": "db",
      "id": [Function],
    }
  }
  columnDefinitions={
    [
      {
        "id": "id",
        "isPartitionKey": false,
        "label": "ID",
      },
      {
        "id": "partitionKey",
        "isPartitionKey": true,
        "label": "Partition Key",
      },
    ]
  }
  isRowSelectionDisabled={false}
  items={
    [
      {
        "id": "1",
        "partitionKey": "pk1",
      },
      {
        "id": "2",
        "partitionKey": "pk2",
      },
      {
        "id": "3",
        "partitionKey": "pk3",
      },
    ]
  }
  onItemClicked={[Function]}
  onRefreshTable={[Function]}
  onSelectedRowsChange={[Function]}
  selectedColumnIds={[]}
  selectedRows={Set {}}
  size={
    {
      "height": 0,
      "width": 0,
    }
  }
>
  <Table
    aria-label="Filtered documents table"
    data-tabster="{"mover":{"cyclic":false,"direction":3,"memorizeCurrent":true}}"
    noNativeElements={true}
    role="grid"
    size="small"
    sortable={true}
    style={
      {
        "minWidth": "fit-content",
      }
    }
  >
    <div
      aria-label="Filtered documents table"
      className="fui-Table ___1kbqy50_18rlg51 fgkb47j fhovq9v ftgm304"
      data-tabster="{"mover":{"cyclic":false,"direction":3,"memorizeCurrent":true}}"
      role="grid"
      style={
        {
          "minWidth": "fit-content",
        }
      }
    >
      <TableHeader
        className="___1gzszts_0000000 f22iagw"
      >
        <div
          className="fui-TableHeader ___1gzszts_39qb7g0 f22iagw"
          role="rowgroup"
        >
          <TableRow
            className="___1flxklq_0000000 f1i800kq"
            style={
              {
                "width": -15,
              }
            }
          >
            <div
              className="fui-TableRow ___1ah7syw_1i43eqh f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1facbz3 f22iagw f122n59 f1i800kq"
              role="row"
              style={
                {
                  "width": -15,
                }
              }
            >
              <TableSelectionCell
                checkboxIndicator={
                  {
                    "aria-label": "Select all rows ",
                  }
                }
                checked={false}
                key="selectcell"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="fui-TableSelectionCell ___baqg420_1ne6yhd f17mccla fz5stix f1mk8lai f1dxfoyt f2krc9w f22iagw f1izfyrr fvrlu0f f1c71y05 f4d9j23"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="cell"
                >
                  <Checkbox
                    aria-label="Select all rows "
                    checked={false}
                    className="fui-TableSelectionCell__checkboxIndicator"
                  >
                    <span
                      className="fui-Checkbox r1q22k1j fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                    >
                      <input
                        aria-label="Select all rows "
                        checked={false}
                        className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                        id="checkbox-2"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        aria-hidden={true}
                        className="fui-Checkbox__indicator rl7ci6d"
                      />
                    </span>
                  </Checkbox>
                </div>
              </TableSelectionCell>
            </div>
          </TableRow>
          <div
            className="___1ndi7nn_0000000 f64fuq3 f1ppkcfa"
          />
        </div>
      </TableHeader>
      <TableBody>
        <div
          className="fui-TableBody ___oeyxrt0_1baslyg ftgm304"
          role="rowgroup"
        >
          <List
            direction="ltr"
            height={-32}
            itemCount={3}
            itemData={
              [
                {
                  "appearance": "none",
                  "item": {
                    "id": "1",
                    "partitionKey": "pk1",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 0,
                  "selected": false,
                },
                {
                  "appearance": "none",
                  "item": {
                    "id": "2",
                    "partitionKey": "pk2",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 1,
                  "selected": false,
                },
                {
                  "appearance": "none",
                  "item": {
                    "id": "3",
                    "partitionKey": "pk3",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 2,
                  "selected": false,
                },
              ]
            }
            itemSize={32}
            layout="vertical"
            overscanCount={2}
            style={
              {
                "overflowY": "scroll",
              }
            }
            useIsScrolling={false}
            width={0}
          >
            <div
              onScroll={[Function]}
              style={
                {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": -32,
                  "overflow": "auto",
                  "overflowY": "scroll",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
            >
              <div
                style={
                  {
                    "height": 96,
                    "pointerEvents": undefined,
                    "width": "100%",
                  }
                }
              >
                <RenderRow
                  data={
                    [
                      {
                        "appearance": "none",
                        "item": {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={0}
                  key="0"
                  style={
                    {
                      "height": 32,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={2}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="1"
                    style={
                      {
                        "cursor": "pointer",
                        "height": 32,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 0,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={2}
                      aria-selected={false}
                      className="fui-TableRow ___1h2me2v_1yag1rz f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f4xjyn1 ff1wgvm fiob0tu f1j6scgf f1x4h75k f1facbz3 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        {
                          "cursor": "pointer",
                          "height": 32,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 0,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableSelectionCell
                        checkboxIndicator={
                          {
                            "aria-label": "Select row",
                          }
                        }
                        checked={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          className="fui-TableSelectionCell ___baqg420_1ne6yhd f17mccla fz5stix f1mk8lai f1dxfoyt f2krc9w f22iagw f1izfyrr fvrlu0f f1c71y05 f4d9j23"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="cell"
                        >
                          <Checkbox
                            aria-label="Select row"
                            checked={false}
                            className="fui-TableSelectionCell__checkboxIndicator"
                          >
                            <span
                              className="fui-Checkbox r1q22k1j fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                            >
                              <input
                                aria-label="Select row"
                                checked={false}
                                className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                                id="checkbox-10"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                aria-hidden={true}
                                className="fui-Checkbox__indicator rl7ci6d"
                              />
                            </span>
                          </Checkbox>
                        </div>
                      </TableSelectionCell>
                    </div>
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    [
                      {
                        "appearance": "none",
                        "item": {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={1}
                  key="1"
                  style={
                    {
                      "height": 32,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 32,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={3}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="2"
                    style={
                      {
                        "cursor": "pointer",
                        "height": 32,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 32,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={3}
                      aria-selected={false}
                      className="fui-TableRow ___1h2me2v_1yag1rz f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f4xjyn1 ff1wgvm fiob0tu f1j6scgf f1x4h75k f1facbz3 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        {
                          "cursor": "pointer",
                          "height": 32,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 32,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableSelectionCell
                        checkboxIndicator={
                          {
                            "aria-label": "Select row",
                          }
                        }
                        checked={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          className="fui-TableSelectionCell ___baqg420_1ne6yhd f17mccla fz5stix f1mk8lai f1dxfoyt f2krc9w f22iagw f1izfyrr fvrlu0f f1c71y05 f4d9j23"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="cell"
                        >
                          <Checkbox
                            aria-label="Select row"
                            checked={false}
                            className="fui-TableSelectionCell__checkboxIndicator"
                          >
                            <span
                              className="fui-Checkbox r1q22k1j fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                            >
                              <input
                                aria-label="Select row"
                                checked={false}
                                className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                                id="checkbox-12"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                aria-hidden={true}
                                className="fui-Checkbox__indicator rl7ci6d"
                              />
                            </span>
                          </Checkbox>
                        </div>
                      </TableSelectionCell>
                    </div>
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    [
                      {
                        "appearance": "none",
                        "item": {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      {
                        "appearance": "none",
                        "item": {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={2}
                  key="2"
                  style={
                    {
                      "height": 32,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 64,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={4}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="3"
                    style={
                      {
                        "cursor": "pointer",
                        "height": 32,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 64,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={4}
                      aria-selected={false}
                      className="fui-TableRow ___1h2me2v_1yag1rz f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 f1dxfoyt f2krc9w f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f4xjyn1 ff1wgvm fiob0tu f1j6scgf f1x4h75k f1facbz3 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        {
                          "cursor": "pointer",
                          "height": 32,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 64,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableSelectionCell
                        checkboxIndicator={
                          {
                            "aria-label": "Select row",
                          }
                        }
                        checked={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          className="fui-TableSelectionCell ___baqg420_1ne6yhd f17mccla fz5stix f1mk8lai f1dxfoyt f2krc9w f22iagw f1izfyrr fvrlu0f f1c71y05 f4d9j23"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="cell"
                        >
                          <Checkbox
                            aria-label="Select row"
                            checked={false}
                            className="fui-TableSelectionCell__checkboxIndicator"
                          >
                            <span
                              className="fui-Checkbox r1q22k1j fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                            >
                              <input
                                aria-label="Select row"
                                checked={false}
                                className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                                id="checkbox-14"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                aria-hidden={true}
                                className="fui-Checkbox__indicator rl7ci6d"
                              />
                            </span>
                          </Checkbox>
                        </div>
                      </TableSelectionCell>
                    </div>
                  </TableRow>
                </RenderRow>
              </div>
            </div>
          </List>
        </div>
      </TableBody>
    </div>
  </Table>
</DocumentsTableComponent>
`;
